--- a/css/basic.css
+++ b/css/basic.css
@@ -8,7 +8,84 @@ body{
 	margin:0;
 	padding:0;
 }
+#main{
+	
+}
+#intro{
+	position: absolute;
+	bottom: 70px;
+	left: 50%;
+	margin-left: -70px;
+}
 
+.title img{
+	position: absolute;
+}
+
+#title1{
+	width: 60%;
+	top: 7%;
+	left: 50%;
+	margin-left: -30%;
+}
+
+#title2{
+	width: 60%;
+	top: 25%;
+	left: 50%;
+	margin-left: -30%;
+}
+
+#title3{
+	width: 64%;
+	top: 33%;
+	left: 50%;
+	margin-left: -32%;
+}
+
+.button{
+width: 140px;
+line-height: 38px;
+text-align: center;
+font-weight: bold;
+color: #fff;
+text-shadow:1px 1px 1px #333;
+border-radius: 5px;
+margin:0 20px 20px 0;
+position: relative;
+overflow: hidden;
+}
+
+.button:nth-child(6n){
+margin-right: 0;
+}
+
+.button.red{
+border:1px solid #b42323;
+box-shadow: 0 1px 2px #e99494 inset,0 -1px 0 #954b4b inset,0 -2px 3px #e99494 inset;
+background: -webkit-linear-gradient(top,#d53939,#b92929);
+background: -moz-linear-gradient(top,#d53939,#b92929);
+background: linear-gradient(top,#d53939,#b92929);
+}
+
+.red:hover{
+background: -webkit-linear-gradient(top,#eb6f6f,#c83c3c);
+background: -moz-linear-gradient(top,#eb6f6f,#c83c3c);
+background: linear-gradient(top,#eb6f6f,#c83c3c);
+}
+
+.red:active{
+top:1px;
+box-shadow: 0 1px 3px #5b0505 inset,0 3px 0 #fff;
+background: -webkit-linear-gradient(top,#b11a1a,#bf2626);
+background: -moz-linear-gradient(top,#b11a1a,#bf2626);
+background: linear-gradient(top,#b11a1a,#bf2626);
+}
+
+
+#bg img{
+	width: 100%;
+}
 .flipbook-viewport{
 	overflow:hidden;
 	width:100%;
