--- a/css/basic.css
+++ b/css/basic.css
@@ -1,5 +1,3 @@
-/* Basic sample */
-
 body{
 	overflow:hidden;
 	background-color: #ffffff;
@@ -8,9 +6,54 @@ body{
 	margin:0;
 	padding:0;
 }
-#main{
-	
+
+/* music */
+@-webkit-keyframes reverseRotataZ{
+    0%{-webkit-transform: rotateZ(0deg);}
+    100%{-webkit-transform: rotateZ(-360deg);}
 }
+@-webkit-keyframes rotataZ{
+    0%{-webkit-transform: rotateZ(0deg);}
+    100%{-webkit-transform: rotateZ(360deg);}
+}
+#musicControl { position:fixed;right:10px;top:20px;margin-top:0;display:inline-block;z-index:99999999}
+#musicControl a { display:inline-block;width:25px;height:25px;overflow:hidden;background:url('../image/play.png') no-repeat;background-size:100%;}
+#musicControl a audio{width:100%;height:56px;}
+#musicControl a.stop { background-position:left bottom;}
+#musicControl a.on { background-position:0px 1px;-webkit-animation: reverseRotataZ 1.2s linear infinite;}
+#music_play_filter{width:100%;height:100%;overflow:hidden;position:fixed;top:0;left:0;z-index:99999998;}
+
+@keyframes shake {
+		0%{
+			transform: scale(0);
+		}
+		30%{
+			transform: scale(1.2);
+		}
+		40%{
+			transform: scale(0.8);
+		}
+		50%{
+			transform: scale(1.15);
+		}
+		60%{
+			transform: scale(0.9);
+		}
+		70%{
+			transform: scale(1.1);
+		}
+		80%{
+			transform: scale(0.95);
+		}
+		90%{
+			transform: scale(1.05);
+		}
+		100%{
+			transform: scale(1);
+		}
+	}
+
+
 #intro{
 	position: absolute;
 	bottom: 70px;
@@ -23,25 +66,36 @@ body{
 }
 
 #title1{
-	width: 60%;
-	top: 7%;
+	width: 50%;
+	top: 10%;
 	left: 50%;
-	margin-left: -30%;
+	margin-left: -25%;
+	animation: shake 1.2s linear;
 }
 
 #title2{
 	width: 60%;
 	top: 25%;
-	left: 50%;
+	left: -50%;
 	margin-left: -30%;
 }
+
+#title2.on{
+		left:50%;
+		transition: 1s 1s;
+	}
 
 #title3{
 	width: 64%;
 	top: 33%;
-	left: 50%;
-	margin-left: -32%;
+	right: -50%;
+	margin-right: -32%;
 }
+
+#title3.on{
+		right:50%;
+		transition: 1s 1s;
+	}
 
 .button{
 width: 140px;
