--- a/css/basic.css
+++ b/css/basic.css
@@ -16,8 +16,8 @@ body{
     0%{-webkit-transform: rotateZ(0deg);}
     100%{-webkit-transform: rotateZ(360deg);}
 }
-#musicControl { position:fixed;right:10px;top:20px;margin-top:0;display:inline-block;z-index:99999999}
-#musicControl a { display:inline-block;width:25px;height:25px;overflow:hidden;background:url('../image/play.png') no-repeat;background-size:100%;}
+#musicControl { position:fixed;left:20px;top:20px;margin-top:0;display:inline-block;z-index:99999999}
+#musicControl a { display:inline-block;width:25px;height:25px;overflow:hidden;background:url('../image/function/play.png') no-repeat;background-size:100%;}
 #musicControl a audio{width:100%;height:56px;}
 #musicControl a.stop { background-position:left bottom;}
 #musicControl a.on { background-position:0px 1px;-webkit-animation: reverseRotataZ 1.2s linear infinite;}
@@ -82,7 +82,7 @@ body{
 
 #title2.on{
 		left:50%;
-		transition: 1s 1s;
+		transition: 1s 0.5s;
 	}
 
 #title3{
@@ -94,7 +94,7 @@ body{
 
 #title3.on{
 		right:50%;
-		transition: 1s 1s;
+		transition: 1s 0.5s;
 	}
 
 .button{
