--- a/css/basic.css
+++ b/css/basic.css
@@ -23,6 +23,29 @@ body{
 #musicControl a.on { background-position:0px 1px;-webkit-animation: reverseRotataZ 1.2s linear infinite;}
 #music_play_filter{width:100%;height:100%;overflow:hidden;position:fixed;top:0;left:0;z-index:99999998;}
 
+#hide{
+	background-color: black;
+	opacity: 0.8;
+	width: 100%;
+	height: 2000px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 99999999999;
+}
+#hide svg{
+	position: absolute;
+	right: 0;
+	top: 300px;
+}
+
+#hide p{
+	position: absolute;
+	color: #cdcdcd;
+	right: 40px;
+	top: 420px;
+}
+
 @keyframes shake {
 		0%{
 			transform: scale(0);
