--- a/css/basic.css
+++ b/css/basic.css
@@ -46,6 +46,35 @@ body{
 	top: 420px;
 }
 
+#hide div{
+	animation: fade 600ms infinite;
+    -webkit-animation: fade 1000ms infinite;
+}
+
+@keyframes fade {
+    from {
+        opacity: 1.0;
+    }
+    50% {
+        opacity: 0.4;
+    }
+    to {
+        opacity: 1.0;
+    }
+}
+
+@-webkit-keyframes fade {
+    from {
+        opacity: 1.0;
+    }
+    50% {
+        opacity: 0.4;
+    }
+    to {
+        opacity: 1.0;
+    }
+}
+
 @keyframes shake {
 		0%{
 			transform: scale(0);
