--- a/css/basic.css
+++ b/css/basic.css
@@ -23,6 +23,24 @@ body{
 #musicControl a.on { background-position:0px 1px;-webkit-animation: reverseRotataZ 1.2s linear infinite;}
 #music_play_filter{width:100%;height:100%;overflow:hidden;position:fixed;top:0;left:0;z-index:99999998;}
 
+
+#contentControl { position:fixed;right:10px;bottom:20px;width:13%;margin-top:0;z-index:99999999;}
+#content{
+/*	background-color: black;
+	opacity: 0.8;
+	width: 100%;
+	height: 2000px;*/
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 99999999999;
+}
+
+#content img{
+	width: 100%;
+}
+
+
 #hide{
 	background-color: black;
 	opacity: 0.8;
@@ -119,17 +137,17 @@ body{
 
 #title1{
 	width: 50%;
-	top: 10%;
+	top: 80px;
 	left: 50%;
 	margin-left: -25%;
 	animation: shake 1.2s linear;
 }
 
 #title2{
-	width: 60%;
-	top: 25%;
+	width: 40%;
+	top: 180px;
 	left: -50%;
-	margin-left: -30%;
+	margin-left: -20%;
 }
 
 #title2.on{
@@ -138,10 +156,10 @@ body{
 	}
 
 #title3{
-	width: 64%;
-	top: 33%;
+	width: 48%;
+	top: 220px;
 	right: -50%;
-	margin-right: -32%;
+	margin-right: -24%;
 }
 
 #title3.on{
