--- a/css/basic.css
+++ b/css/basic.css
@@ -24,7 +24,7 @@ body{
 #music_play_filter{width:100%;height:100%;overflow:hidden;position:fixed;top:0;left:0;z-index:99999998;}
 
 
-#contentControl { position:fixed;right:10px;bottom:20px;width:13%;margin-top:0;z-index:99999999999999;}
+#contentControl img{ position:fixed;right:10px;bottom:20px;width:13%;margin-top:0;z-index:99999999999999;}
 #content{
 /*	background-color: black;
 	opacity: 0.8;
@@ -33,7 +33,7 @@ body{
 	position: absolute;
 	top: 0;
 	left: 0;
-	z-index: 99999999999;
+	z-index: 999999999;
 }
 
 #content img{
